[gd_scene load_steps=14 format=3 uid="uid://dmafyevf4c6fj"]

[ext_resource type="Script" path="res://Game/Worlds/Scripts/TheMoonLevel.gd" id="1_5rmj7"]
[ext_resource type="PackedScene" uid="uid://qhcex4ei7jh" path="res://Game/Bosses/The Moon/TheMoon.tscn" id="2_lhcvt"]
[ext_resource type="PackedScene" uid="uid://u2iwyorybvbb" path="res://Game/Worlds/TheStarLevel.tscn" id="2_li6to"]
[ext_resource type="PackedScene" uid="uid://c7uf6qtxcabm7" path="res://Game/Bosses/The Moon/MoonSea.tscn" id="3_t7i8k"]
[ext_resource type="PackedScene" uid="uid://cavv0c8wefvuo" path="res://Game/Player/Player.tscn" id="4_gl2if"]
[ext_resource type="PackedScene" uid="uid://dc1577qcp3rxm" path="res://Game/User Interface/GameOverMenu.tscn" id="5_dronw"]
[ext_resource type="PackedScene" uid="uid://c78ehdrxbyqf0" path="res://Game/User Interface/HUD.tscn" id="5_xptiv"]
[ext_resource type="PackedScene" uid="uid://cjmdhblarenrq" path="res://Game/User Interface/NextLevelMenu.tscn" id="6_5cx0w"]
[ext_resource type="Script" path="res://Game/Worlds/Scripts/moon_path_follow.gd" id="6_fg75b"]
[ext_resource type="AudioStream" uid="uid://wfuut013riu8" path="res://Music and Sounds/Musics/phase1.mp3" id="8_woe1d"]
[ext_resource type="AudioStream" uid="uid://dxp32e78qpvgd" path="res://Music and Sounds/Musics/phase2.mp3" id="9_vp0mj"]

[sub_resource type="TileSet" id="TileSet_r7jav"]
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0

[sub_resource type="Curve2D" id="Curve2D_qbk3n"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 256, 32, 0, 0, 0, 0, 208, 96, 0, 0, 0, 0, 304, 192, 0, 0, 0, 0, 256, 256, 0, 0, 0, 0, 208, 192, 0, 0, 0, 0, 304, 96, 0, 0, 0, 0, 256, 32)
}
point_count = 7

[node name="TheMoonLevel" type="Node2D" node_paths=PackedStringArray("boss")]
script = ExtResource("1_5rmj7")
boss = NodePath("Path2D/MoonPathFollow/TheMoon")
next_level = ExtResource("2_li6to")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_r7jav")
format = 2
layer_0/name = "bg"
layer_0/tile_data = PackedInt32Array(1179648, 65536, 2, 1179649, 65536, 2, 1179650, 65536, 2, 1179651, 65536, 2, 1179652, 65536, 2, 1179653, 65536, 2, 1179654, 65536, 2, 1179655, 65536, 2, 1179656, 65536, 2, 1179657, 65536, 2, 1179658, 65536, 2, 1179659, 65536, 2, 1179660, 65536, 2, 1179661, 65536, 2, 1179662, 65536, 2, 1179663, 65536, 2, 1179664, 65536, 2, 1179665, 65536, 2, 1179666, 65536, 2, 1179667, 65536, 2, 1179668, 65536, 2, 1179669, 65536, 2, 1179670, 65536, 2, 1179671, 65536, 2, 1179672, 65536, 2, 1179673, 65536, 2, 1179674, 65536, 2, 1179675, 65536, 2, 1179676, 65536, 2, 1179677, 65536, 2, 1179678, 65536, 2, 1179679, 65536, 2, 65568, 131072, 1, 131104, 131072, 1, 196640, 131072, 1, 262176, 131072, 1, 327712, 131072, 1, 393248, 131072, 1, 458784, 131072, 1, 524320, 131072, 1, 589856, 131072, 1, 655392, 131072, 1, 720928, 131072, 1, 786464, 131072, 1, 852000, 131072, 1, 917536, 131072, 1, 983072, 131072, 1, 1048608, 131072, 1, 1114144, 131072, 1, -65536, 65536, 0, -65535, 65536, 0, -65534, 65536, 0, -65533, 65536, 0, -65532, 65536, 0, -65531, 65536, 0, -65530, 65536, 0, -65529, 65536, 0, -65528, 65536, 0, -65527, 65536, 0, -65526, 65536, 0, -65525, 65536, 0, -65524, 65536, 0, -65523, 65536, 0, -65522, 65536, 0, -65521, 65536, 0, -65520, 65536, 0, -65519, 65536, 0, -65518, 65536, 0, -65517, 65536, 0, -65516, 65536, 0, -65515, 65536, 0, -65514, 65536, 0, -65513, 65536, 0, -65512, 65536, 0, -65511, 65536, 0, -65510, 65536, 0, -65509, 65536, 0, -65508, 65536, 0, -65507, 65536, 0, -65506, 65536, 0, 131071, 0, 1, 196607, 0, 1, 262143, 0, 1, 327679, 0, 1, 393215, 0, 1, 458751, 0, 1, 524287, 0, 1, 589823, 0, 1, 655359, 0, 1, 720895, 0, 1, 786431, 0, 1, 851967, 0, 1, 917503, 0, 1, 983039, 0, 1, 1048575, 0, 1, 1114111, 0, 1, -65505, 65536, 0, 1179647, 0, 1, 65535, 0, 1, 32, 131072, 1, -65504, 131072, 0, 1179680, 131072, 2, 1245183, 0, 2, -1, 0, 0)
layer_1/name = "front"
layer_1/tile_data = PackedInt32Array()

[node name="Player" parent="." instance=ExtResource("4_gl2if")]
position = Vector2(81, 151)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Hud" parent="CanvasLayer" instance=ExtResource("5_xptiv")]
metadata/_edit_use_anchors_ = true
metadata/_edit_lock_ = true

[node name="GameOverMenu" parent="CanvasLayer" instance=ExtResource("5_dronw")]
visible = false
repeat_level_path = "res://Game/Worlds/TheMoonLevel.tscn"

[node name="NextLevelMenu" parent="CanvasLayer" instance=ExtResource("6_5cx0w")]
visible = false

[node name="MoonSea" parent="." instance=ExtResource("3_t7i8k")]

[node name="Path2D" type="Path2D" parent="."]
position = Vector2(176, 0)
curve = SubResource("Curve2D_qbk3n")

[node name="MoonPathFollow" type="PathFollow2D" parent="Path2D"]
position = Vector2(256, 144)
rotation = 2.2143
progress = 443.647
rotates = false
script = ExtResource("6_fg75b")
speed = 0.2

[node name="TheMoon" parent="Path2D/MoonPathFollow" instance=ExtResource("2_lhcvt")]
position = Vector2(3.09944e-06, 5.24521e-06)
rotation = -2.2143

[node name="PointTimer" type="Timer" parent="Path2D/MoonPathFollow"]
one_shot = true

[node name="Phase1Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_woe1d")
bus = &"Music"

[node name="Phase2Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_vp0mj")
bus = &"Music"
